--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "22850034-asd-athentication",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
