--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,22 @@
   "development": {
     "username": "postgres",
     "password": null,
-    "database": "hcmuscab_dev",
+    "database": "hcmuscab_authentication_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
+    "username": "postgres",
     "password": null,
-    "database": "database_test",
+    "database": "hcmuscab_authentication_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
+    "username": "postgres",
     "password": null,
-    "database": "database_production",
+    "database": "hcmuscab_authentication_prod",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
